# agv_app_msgs

./: CMakeLists.txt  package.xml  readme.md
msg/: Action.msg  ActionDetail.msg  AgvPosition.msg  AppData.msg  AppRequest.msg  Avoid.msg  Battery.msg  CancelTask.msg  ControlPoint.msg  Edge.msg  EdgeDetail.msg  EmergencyStop.msg  Error.msg  Lifting.msg  ManageDataSubscription.msg  McuData.msg  MqttState.msg  Node.msg  NodeDetail.msg  OperatingMode.msg  PalletRotation.msg  PointXyzi.msg  ProcessInfo.msg  QrCameraData.msg  Relocation.msg  RemoteControl.msg  Resource.msg  Rotation.msg  RunningTask.msg  Servor.msg  SetOperatingMode.msg  SysInfo.msg  Task.msg  TaskChain.msg  Translation.msg  Version.msg
